GNOME Bugzilla – Bug 771655
event end mark not shown right on 'other events' list for multiday events.
Last modified: 2017-04-17 18:20:40 UTC
Created attachment 335855 [details] Multiday event in 'other events' (image) The event is marked as event continuation when the event is listed in 'other events'. How to reproduce: 1. Create several multi-day events I created 4 events spanning from Sept 21 to 22 (2 day events) 2. Now click on the other event of the second day. Result: The event is shown as a continuation event. Please see the attached screenshot. Thanks
I think I have figured it out. rebuild_popover_for_day() sets the start and end dates of the event widget, but the GDateTime is for the local time zone. The problem with that is that all-day events are UTC and gcal_event_widget_update_style() sets the “slanted-end” class, because the two GDateTime objects do not match. I am yet to come up with a fix, but none of my ideas are too easy on the eyes.
Created attachment 336394 [details] [review] month-view: calculate popover events on a per-event basis Since we need to special-case the datetimes to deal with UTC all day events, using a general local GTimeZone would cause the cloned all-day events to show wrongly inside the popover. Fix that by calculating each event's start and end dates according to the all day events.
Thanks for the report, and thanks Ernerstas for stretching the investigation down to rebuild_popover_for_day(). Attachment 336394 [details] pushed as 9662635 - month-view: calculate popover events on a per-event basis