month-view: calculate popover events on a per-event basis

Since we need to special-case the datetimes to deal with UTC
all day events, using a general local GTimeZone would cause
the cloned all-day events to show wrongly inside the popover.

Fix that by calculating each event's start and end dates according
to the all day events.

https://bugzilla.gnome.org/show_bug.cgi?id=771655